fix(modal): backdrop is no longer tappable on card-style modal on smaller screens (#20802)
fixes #20783

--- a/core/src/components/modal/modal.ios.scss
+++ b/core/src/components/modal/modal.ios.scss
@@ -26,6 +26,10 @@
   align-items: flex-end;
 }
 
+:host(.modal-card) ion-backdrop {
+  pointer-events: none;
+}
+
 :host(.modal-card) .modal-wrapper {
   @include border-radius($modal-ios-border-radius, $modal-ios-border-radius, 0, 0);
   height: calc(100% - 40px);
